--- a/style.css
+++ b/style.css
@@ -47,8 +47,20 @@ justify-content: space-between;
 }
 .liv_space{
     margin: 0px;
+    width: 150px;
+    height: 28px;
 }
+.liv_space2{
+    width: 100%;
+    height: 700px;
 
+}
+.enter_name{
+    font-size: 12px;
+    margin-top: 1px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(235, 89, 95);
+}
 
 
 .container1{
@@ -168,8 +180,14 @@ justify-content: space-between;
     color: #41303e;
 }
 .privacy{
-    color: #fbf7f7;
-    
+    color: rgb(235, 89, 95);
+    text-decoration: none;
+    font-weight: 600;
+}
+.terms{
+    color: rgb(235, 89, 95);
+    text-decoration: none;
+    font-weight: 600;
 }
 .reasonsWrapper{
     display: flex;
@@ -226,6 +244,18 @@ justify-content: space-between;
 }
 .last_button:hover{
     opacity: .7;
+}
+.personilsed_design{
+    width: 100px;
+    line-height: 16px;
+    
+}
+.Warrenty{
+    width: 100px;
+    line-height: 16px;
+}
+.transparent{
+    width: 100px;
 }
 
 
