--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+body{
+    margin: 0;
+}
 .images{
     width:840px;
     height: 550px;
@@ -88,7 +90,7 @@ justify-content: space-between;
     color: white;
 }
 .sub_des{
-    width: 100%;
+    width: 70%;
     color: white;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 20px;
@@ -100,16 +102,19 @@ justify-content: space-between;
 }
 
 
-.details{
-    width: 23.1%;
-    height: 62.2%;
+
+.details {
+    width: 400px;
+    height: 450px;
     background-color: #fbf7f7;
     position: absolute;
     top: 10%;
-    left: 59%;
+    right: 10%;
     padding: 40px;
-    border-radius:3% ;
+    border-radius: 3%;
 }
+    
+
 .detail_heading{
     margin-left: 35px;
     width: 250px;
@@ -202,7 +207,7 @@ justify-content: space-between;
     justify-content: center;
     line-height: 15px;
 }
-.Warrenty{
+.warrenty{
     margin-left: 10%;
     display: flex;
     flex-direction: column;
@@ -243,6 +248,7 @@ justify-content: space-between;
     border-radius: 115px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
+    margin: 1%;
 }
 .last_button:hover{
     opacity: .7;
